--- a/Kerbal Space Program/GameData/StarshipInterface/Patches/IVA.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Patches/IVA.cfg
@@ -1,4 +1,4 @@
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[B9PartSwitch,FreeIVA,Reviva,NearFutureProps,JSI,ASET/ASET_Props]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[B9PartSwitch,Reviva,NearFutureProps,RasterPropMonitor,ASET/ASET_Props]:FOR[StarshipInterface]
 {
 	@INTERNAL 
 	{
