--- a/Kerbal Space Program/GameData/StarshipInterface/Props/StarshipMFD/StarshipMFD.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Props/StarshipMFD/StarshipMFD.cfg
@@ -21,10 +21,7 @@ PROP
 		emptyColor = 0,0,0,255
 		
 		fontDefinition = ASET/ASET_Props/MFDs/Fonts/fontDefinition.txt
-		
-		extraFont = ASET/ASET_Props/MFDs/Fonts/extraFont1
 		extraFont = ASET/ASET_Props/MFDs/Fonts/InvertedMainFont
-		extraFont = ASET/ASET_Props/MFDs/Fonts/InvertedExtraFont
 		
 		refreshDrawRate = 1
 		refreshTextRate = 2
@@ -456,4 +453,64 @@ PROP
 	}
 }
 
+RPM_MATH_VARIABLE
+{
+   name = STARSHIP_RADARALT
+   operator = SUBTRACT
 
+   sourceVariable = RADARALTOCEAN
+   sourceVariable = 14.85
+}
+
+RPM_CUSTOM_VARIABLE
+{
+	name = STARSHIP_SLOPE_WARNING
+	operator = AND
+	SOURCE_VARIABLE
+	{
+		name = RADARALTOCEAN
+		range = 0, 250
+	}
+	SOURCE_VARIABLE
+	{
+		name = SLOPEANGLE
+		range = 2.5, 90
+	}
+}
+
+RPM_CUSTOM_VARIABLE
+{
+	name = STARSHIP_GEAR_WARNING
+	operator = AND
+	SOURCE_VARIABLE
+	{
+		name = RADARALTOCEAN
+		range = 0.5, 25
+	}
+	SOURCE_VARIABLE
+	{
+		name = GEAR
+		range = -0.5, 0.5
+	}
+	SOURCE_VARIABLE
+	{
+		name = VERTSPEED
+		range = -10, 0.1
+	}
+}
+
+RPM_CUSTOM_VARIABLE
+{
+	name = STARSHIP_IMPACT_WARNING
+	operator = AND
+	SOURCE_VARIABLE
+	{
+		name = RADARALTOCEAN
+		range = 0.5, 50
+	}
+	SOURCE_VARIABLE
+	{
+		name = VERTSPEED
+		range = -10000, -10
+	}
+}
