--- a/Kerbal Space Program/GameData/StarshipInterface/Spaces/SEP_CREW_IVA/SEP_CREW_IVA_SIMPLE_WINDOWS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Spaces/SEP_CREW_IVA/SEP_CREW_IVA_SIMPLE_WINDOWS.cfg
@@ -11,6 +11,10 @@ INTERNAL
 	}
 	MODULE
 	{
+		name = JSISetInternalCameraFOV
+	}
+	MODULE
+	{
 		name = InternalModuleFreeIva
 		shellColliderName = SIMPLE_FreeIvaShell
 		internalDepthMaskName = SIMPLE_InteriorMask
@@ -23,6 +27,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 1
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -32,6 +37,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 2
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -41,6 +47,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 3
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -50,6 +57,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 4
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -59,6 +67,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 5
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -68,6 +77,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 6
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -77,6 +87,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 7
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -86,6 +97,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 8
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -95,6 +107,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 9
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -104,6 +117,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 10
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -113,6 +127,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 11
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -122,6 +137,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 12
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -131,6 +147,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 13
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -140,6 +157,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 14
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -149,6 +167,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 15
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -158,6 +177,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 16
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -167,6 +187,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 17
+		maxRot = 100
 	}
 	MODULE
 	{
@@ -176,6 +197,7 @@ INTERNAL
 		allowCrewHelmet = false
 		displayseatName = #autoLoc_6002196
 		displayseatIndex = 18
+		maxRot = 100
 	}
 	PROP
 	{
@@ -4232,5 +4254,16 @@ INTERNAL
             name = HatchConfig
             isEvaHatch = true
 		}
+	}
+	MODULE
+	{
+		name = InternalCameraTargetHelper
+	}
+	MODULE
+	{
+		name = JSIInternalBackgroundNoise
+		soundURL = StarshipInterface/Spaces/SEP_CREW_IVA/background_noise
+		soundVolume = 1
+		needsElectricCharge = True
 	}
 }
