--- a/Kerbal Space Program/GameData/StarshipInterface/Props/StarshipMFD/StarshipMFD.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Props/StarshipMFD/StarshipMFD.cfg
@@ -257,7 +257,7 @@ PROP
 			}
 		}
 
-		PAGE
+		PAGE:NEEDS[MechJeb2]
 		{
 			name = MJMenu
 			button = buttonR3
@@ -512,5 +512,16 @@ RPM_CUSTOM_VARIABLE
 	{
 		name = VERTSPEED
 		range = -10000, -10
+	}
+}
+
+RPM_CUSTOM_VARIABLE
+{
+	name = STARSHIP_BAT_LOW_WARNING
+	operator = AND
+	SOURCE_VARIABLE
+	{
+		name = SYSR_ELECTRICCHARGEPERCENT
+		range = 0, 0.15
 	}
 }
