--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CLUSTER_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CLUSTER_KOS.cfg
@@ -52,9 +52,9 @@ PART
 	description = A few decades ago, some people tried to put a lot of engines together, it didn't work. Let's hope Jeb has figured this out by now.
 	tags = BFR ITS big BFS ship starship 2021 landing spacex booster superheavy heavy super
 	attachRules = 1,0,1,1,0
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 45
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 0
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 9.2
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 45
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 0
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 9.2
 	// heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.8 // engine nozzles are good at radiating.
@@ -244,7 +244,7 @@ PART
 		thrustTransformName = CenterThrustTransform
 	}
 
-	MODULE:NEEDS[KSRSS|RealSolarSystem]
+	MODULE:NEEDS[KSRSS|RealSolarSystem|Rescale2.5x]
 	{
 		name = ModuleSEPEngineGUI
 
@@ -265,15 +265,15 @@ PART
         RBCover1Transform = RB Cover
 		RBCoverMass = 1
 
-		SingleEngineThrust:NEEDS[!RealSolarSystem,KSRSS] = 627
-		SingleEngineThrust:NEEDS[RealSolarSystem,!KSRSS] = 2363
+		SingleEngineThrust:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 627
+		SingleEngineThrust:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 2363
 		SingleEngineMass = 1.5
 		AllEngineID = AllEngines
 		MiddleEngineID = MiddleInner
 		CenterEngineID = CenterThree
 	}
 
-	MODULE:NEEDS[!RealSolarSystem,!KSRSS]
+	MODULE:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x]
 	{
 		name = ModuleB9DisableTransform
 		transform = INNER9
