--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CORE_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CORE_KOS.cfg
@@ -37,9 +37,9 @@
 	description = "If we put more engines, we're going to need more fuel to feed them!" - Bill Kerman
 	tags = BFR ITS big BFS ship starship 2021 landing spacex booster superheavy heavy super
 	attachRules = 1,0,1,1,0
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 45
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 56
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 120
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 45
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 56
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 120
 	dragModelType = default
 	maximum_drag = 1
 	minimum_drag = 0.3
