--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_GRIDFIN_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_GRIDFIN_KOS.cfg
@@ -29,9 +29,9 @@ PART
 	title = Behemoth Grid Fins
 	manufacturer = Starship Expansion Project with KOS Guidance
 	description = These aerodynamic waffles are capable of steering your gigantic metal tube through the atmosphere. ATTENTION: USE LOAD POINTS FOR CATCHING!
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 1
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 0.7
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 3
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 1
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 0.7
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 3
 	thermalMassModifier = 5.0
 	attachRules = 1,0,0,0,0
 	emissiveConstant = 0.7
@@ -55,9 +55,9 @@ PART
 		dragCoeff = 0.75
 		deflectionLiftCoeff = 1.5
 		ctrlSurfaceRange = 35
-		ctrlSurfaceArea:NEEDS[!RealSolarSystem,!KSRSS] = 2
-		ctrlSurfaceArea:NEEDS[!RealSolarSystem,KSRSS] = 2
-		ctrlSurfaceArea:NEEDS[RealSolarSystem,!KSRSS] = 1.2
+		ctrlSurfaceArea:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 2
+		ctrlSurfaceArea:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 2
+		ctrlSurfaceArea:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 1.2
 		actuatorSpeed = 90
 		transformName = actuatemesh
 		ignorePitch = true
