--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_INTER_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_INTER_KOS.cfg
@@ -66,9 +66,9 @@ PART
 	tags = BFR ITS big BFS ship starship 2021 landing spacex booster superheavy heavy super interstage
 	attachRules = 1,0,1,1,0
 	stagingIcon = DECOUPLER_VERT
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 6
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 4
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 8
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 6
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 4
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 8
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.1
