--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_SHIP_BODY_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_SHIP_BODY_KOS.cfg
@@ -179,9 +179,9 @@ PART
 	description = The center of everything. The Mother of all Tin Cans!
 	tags = BFR ITS big BFS ship starship tanker refuel shroud engine wing deltawing landing spacex
 	attachRules = 1,1,1,1,0
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 20
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 13
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 66
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 20
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 13
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 66
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.2
