--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_SHIP_FWD_LEFT_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_SHIP_FWD_LEFT_KOS.cfg
@@ -30,9 +30,9 @@
 	manufacturer = Starship Expansion Project with KOS Guidance
 	description = Ok, we get it. It's special. DO NOT OFFSET IT
 	attachRules = 1,1,0,0,1
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 1
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 0.98
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 2
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 1
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 0.98
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 2
 	thermalMassModifier = 5.0 // a hair worse than airliner parts
 	emissiveConstant = 0.4
 	dragModelType = none
