--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_23_SHIP_DEPOT_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_23_SHIP_DEPOT_KOS.cfg
@@ -158,9 +158,9 @@ PART
 	description = If you don't have any fuel how can your engines go brr? So let's take a lot of it to space!
 	tags = BFR ITS big BFS ship starship tanker refuel shroud engine wing deltawing landing spacex
 	attachRules = 1,1,1,1,0
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 35
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 23
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 90
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 35
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 23
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 90
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
