--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_23_SHIP_NOSE_EXP_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_23_SHIP_NOSE_EXP_KOS.cfg
@@ -35,9 +35,9 @@ PART
 	bulkheadProfiles = size4
 	tags = BFR ITS big BFS ship starship 2021 pod landing Cargo spacex
 	attachRules = 1,0,1,1,1
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 7.5
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 10
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 25
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 7.5
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 10
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 25
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.1
