--- a/Kerbal Space Program/GameData/StarshipInterface/Patches/Fuel Tanks.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Patches/Fuel Tanks.cfg
@@ -37,19 +37,19 @@
 @PART[SEP_22_SHIP_BODY_KOS|SEP_23_SHIP_BODY_EXP_KOS]:NEEDS[B9PartSwitch]:FOR[StarshipInterface]
 {
     //Stock-sized Kerbin
-	@MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,!KSRSS]:HAS[#moduleID[SEP_Fuel]]
+	@MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 13800 // 12500
 	}
 
     //KSRSS-sized Earth/Kerbin
-    @MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,KSRSS]:HAS[#moduleID[SEP_Fuel]]
+    @MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 36000
 	}
 
     //RSS-sized Earth
-    @MODULE[ModuleB9PartSwitch]:NEEDS[RealSolarSystem,!KSRSS]:HAS[#moduleID[SEP_Fuel]]
+    @MODULE[ModuleB9PartSwitch]:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 240000
 	}
@@ -58,19 +58,19 @@
 @PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[B9PartSwitch]:FOR[StarshipInterface]
 {
 	//Stock-sized Kerbin
-	@MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,!KSRSS]:HAS[#moduleID[SEP_Fuel]]
+	@MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 73600 // 69000
 	}
 
     //KSRSS-sized Earth/Kerbin
-    @MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,KSRSS]:HAS[#moduleID[SEP_Fuel]]
+    @MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 176000
 	}
 
     //RSS-sized Earth
-    @MODULE[ModuleB9PartSwitch]:NEEDS[RealSolarSystem,!KSRSS]:HAS[#moduleID[SEP_Fuel]]
+    @MODULE[ModuleB9PartSwitch]:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 680000
 	}
@@ -79,19 +79,19 @@
 @PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[B9PartSwitch]:FOR[StarshipInterface]
 {
 	//Stock-sized Kerbin
-	@MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,!KSRSS]:HAS[#moduleID[SEP_Fuel]]
+	@MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 15000 // 10000
 	}
 
     //KSRSS-sized Earth/Kerbin
-    @MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,KSRSS]:HAS[#moduleID[SEP_Fuel]]
+    @MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 25000 //previously 15360, Janus suggests 25000 which equals the current 125T kOS uplift capacity in KSRSS
 	}
 
     //RSS-sized Earth
-    @MODULE[ModuleB9PartSwitch]:NEEDS[RealSolarSystem,!KSRSS]:HAS[#moduleID[SEP_Fuel]]
+    @MODULE[ModuleB9PartSwitch]:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 30000
 	}
@@ -100,19 +100,19 @@
 @PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[B9PartSwitch]:FOR[StarshipInterface]
 {
 	//Stock-sized Kerbin
-	@MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,!KSRSS]:HAS[#moduleID[SEP_Fuel]]
+	@MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 1725
 	}
 
     //KSRSS-sized Earth/Kerbin
-    @MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,KSRSS]:HAS[#moduleID[SEP_Fuel]]
+    @MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 1600
 	}
 
     //RSS-sized Earth
-    @MODULE[ModuleB9PartSwitch]:NEEDS[RealSolarSystem,!KSRSS]:HAS[#moduleID[SEP_Fuel]]
+    @MODULE[ModuleB9PartSwitch]:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 4140
 	}
@@ -121,19 +121,19 @@
 @PART[SEP_23_SHIP_DEPOT_KOS]:NEEDS[B9PartSwitch]:FOR[StarshipInterface]
 {
 	//Stock-sized Kerbin
-	@MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,!KSRSS]:HAS[#moduleID[SEP_Fuel]]
+	@MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 50000
 	}
 
     //KSRSS-sized Earth/Kerbin
-    @MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,KSRSS]:HAS[#moduleID[SEP_Fuel]]
+    @MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 96000 //previously 56000, Janus suggests 96000
 	}
 
     //RSS-sized Earth
-    @MODULE[ModuleB9PartSwitch]:NEEDS[RealSolarSystem,!KSRSS]:HAS[#moduleID[SEP_Fuel]]
+    @MODULE[ModuleB9PartSwitch]:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x]:HAS[#moduleID[SEP_Fuel]]
 	{
 		@baseVolume = 340000
 	}
