--- a/Kerbal Space Program/GameData/StarshipInterface/Patches/IVA.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Patches/IVA.cfg
@@ -2,7 +2,7 @@
 {
 	@INTERNAL 
 	{
-		@name = SEP_CREW_IVA_SEATS
+		@name = SEP_CREW_IVA_DM_SEATS
 	}
 
 	MODULE
@@ -79,7 +79,7 @@
 	MODULE
 	{
 		name = ModuleIVASwitch
-		internalName = SEP_CREW_IVA_SEATS
+		internalName = SEP_CREW_IVA_DM_SEATS
 	}
 
 	MODULE
