--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_RAPTOR2_SL_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_RAPTOR2_SL_KOS.cfg
@@ -30,9 +30,9 @@ PART
 	description = Despite Bob accidentally building one of the best engines Kerbalkind ever saw, he wanted more explosions, so he made everyone work overtime and this is what they've managed to do
 	tags = Mk1 Donnager Starship Raptor s0 engine BFS BFR SpaceX
 	attachRules = 1,0,1,0,0
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 0.75
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 1.5
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 1.5
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 0.75
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 1.5
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 1.5
 	// heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.8 // engine nozzles are good at radiating.
@@ -116,9 +116,9 @@ PART
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust:NEEDS[!RealSolarSystem,!KSRSS] = 580
-		maxThrust:NEEDS[!RealSolarSystem,KSRSS] = 600
-		maxThrust:NEEDS[RealSolarSystem,!KSRSS] = 2363
+		maxThrust:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 580
+		maxThrust:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 600
+		maxThrust:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 2363
 		heatProduction = 130
 		EngineType = LiquidFuel
 		PROPELLANT:NEEDS[!CommunityResourcePack]
