--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_RAPTOR_VAC_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_RAPTOR_VAC_KOS.cfg
@@ -30,9 +30,9 @@ PART
 	description = After some big explosions on the prototype, Bob decided to revamp the engine and gave it a big nozzle expecting it to give bigger explosions, but Val found out his design worked really well in space.
 	tags = Mk1 Donnager Starship Raptor s0 engine BFS BFR SpaceX
 	attachRules = 1,0,1,0,0
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 1
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 2
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 2
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 1
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 2
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 2
 	// heatConductivity = 0.06 // half default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.8 // engine nozzles are good at radiating.
@@ -81,9 +81,9 @@ PART
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust:NEEDS[!RealSolarSystem,!KSRSS] = 580
-		maxThrust:NEEDS[!RealSolarSystem,KSRSS] = 600
-		maxThrust:NEEDS[RealSolarSystem,!KSRSS] = 2363
+		maxThrust:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 580
+		maxThrust:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 600
+		maxThrust:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 2363
 		heatProduction = 130
 		EngineType = LiquidFuel
 		PROPELLANT:NEEDS[!CommunityResourcePack]
