--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_SHIP_AFT_RIGHT_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_SHIP_AFT_RIGHT_KOS.cfg
@@ -30,9 +30,9 @@
 	manufacturer = Starship Expansion Project with KOS Guidance
 	description = This is not your average aerodynamic surface. That said, Val has asked why we don't play Flappy Bird anymore. DO NOT ATTACH TO LEFT SIDE
 	attachRules = 1,1,0,0,1
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 1.25
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 1.3
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 2.5
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 1.25
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 1.3
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 2.5
 	thermalMassModifier = 5.0 // a hair worse than airliner parts
 	emissiveConstant = 0.4
 	dragModelType = none
