--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_SHIP_HEADER_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_SHIP_HEADER_KOS.cfg
@@ -35,9 +35,9 @@ PART
 	bulkheadProfiles = size4
 	tags = BFR ITS big BFS ship starship 2021 pod landing Cargo spacex
 	attachRules = 1,0,1,1,1
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 1
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 1
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 2
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 1
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 1
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 2
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.1
