--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_SHIP_TANKER_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_SHIP_TANKER_KOS.cfg
@@ -56,9 +56,9 @@ PART
 	bulkheadProfiles = size4
 	tags = BFR ITS big BFS ship starship 2021 pod landing Cargo spacex
 	attachRules = 1,0,1,1,1
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 10
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 9
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 33
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 10
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 9
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 33
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.1
