--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_23_SHIP_BODY_EXP_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_23_SHIP_BODY_EXP_KOS.cfg
@@ -165,9 +165,9 @@ PART
 	description = The center of everything. The Mother of all Tin Cans! Recovery not included
 	tags = BFR ITS big BFS ship starship tanker refuel shroud engine wing deltawing landing spacex
 	attachRules = 1,1,1,1,0
-	mass:NEEDS[!RealSolarSystem,!KSRSS] = 17.5
-	mass:NEEDS[!RealSolarSystem,KSRSS] = 13
-	mass:NEEDS[RealSolarSystem,!KSRSS] = 55
+	mass:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 17.5
+	mass:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 13
+	mass:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 55
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
