--- a/Kerbal Space Program/GameData/StarshipInterface/Patches/RCS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Patches/RCS.cfg
@@ -4,9 +4,9 @@
 	{
 		name = ModuleRCSFX
 		thrusterTransformName = RCS
-		thrusterPower:NEEDS[!RealSolarSystem,!KSRSS] = 20
-		thrusterPower:NEEDS[!RealSolarSystem,KSRSS] = 35
-		thrusterPower:NEEDS[RealSolarSystem,!KSRSS] = 50
+		thrusterPower:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 20
+		thrusterPower:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 35
+		thrusterPower:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 50
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		PROPELLANT:NEEDS[!CommunityResourcePack]
@@ -46,9 +46,9 @@
 	{
 		name = ModuleRCSFX
 		thrusterTransformName = RCS
-		thrusterPower:NEEDS[!RealSolarSystem,!KSRSS] = 20
-		thrusterPower:NEEDS[!RealSolarSystem,KSRSS] = 34
-		thrusterPower:NEEDS[RealSolarSystem,!KSRSS] = 70
+		thrusterPower:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 20
+		thrusterPower:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 34
+		thrusterPower:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 70
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		PROPELLANT:NEEDS[!CommunityResourcePack]
