--- a/Kerbal Space Program/GameData/StarshipInterface/Patches/Vent.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Patches/Vent.cfg
@@ -11,9 +11,9 @@
 		stagingEnabled = False
         ignitionThreshold = 0.1
         minThrust = 0
-        maxThrust:NEEDS[!RealSolarSystem,!KSRSS] = 1
-        maxThrust:NEEDS[!RealSolarSystem,KSRSS] = 2.5
-        maxThrust:NEEDS[RealSolarSystem,!KSRSS] = 5
+        maxThrust:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 1
+        maxThrust:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 2.5
+        maxThrust:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 5
         heatProduction = 0
         fxOffset = 0, 0, 0
         nonThrustMotor = true
@@ -68,9 +68,9 @@
 		stagingEnabled = False
         ignitionThreshold = 0.1
         minThrust = 0
-        maxThrust:NEEDS[!RealSolarSystem,!KSRSS] = 5
-        maxThrust:NEEDS[!RealSolarSystem,KSRSS] = 12.5
-        maxThrust:NEEDS[RealSolarSystem,!KSRSS] = 25
+        maxThrust:NEEDS[!RealSolarSystem,!KSRSS,!Rescale2.5x] = 5
+        maxThrust:NEEDS[!RealSolarSystem,KSRSS|Rescale2.5x] = 12.5
+        maxThrust:NEEDS[RealSolarSystem,!KSRSS,!Rescale2.5x] = 25
         heatProduction = 0
         fxOffset = 0, 0, 0
         nonThrustMotor = true
