--- a/Kerbal Space Program/GameData/StarshipInterface/Props/StarshipMFD/StarshipMFD.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Props/StarshipMFD/StarshipMFD.cfg
@@ -460,7 +460,7 @@ RPM_MATH_VARIABLE
    operator = SUBTRACT
 
    sourceVariable = RADARALTOCEAN
-   sourceVariable = 14.85
+   sourceVariable = 9.6 // 14.85
 }
 
 RPM_CUSTOM_VARIABLE
