--- a/Kerbal Space Program/GameData/StarshipInterface/Props/StarshipMFD/StarshipMFD.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Props/StarshipMFD/StarshipMFD.cfg
@@ -353,17 +353,17 @@ PROP
 				buttonReleaseMethod = ReleaseProcessor
 				cameraInfoVarName = EXTcam60X30
 				skipMissingCameras = true
-				cameraTransform = Windward|Downward|Downward1|Downward2|CameraTransformAirlock|CameraTransform1|CameraTransform2
-				fovLimits = 90,5|90,5|90,5|90,5|90,5|90,5|90,5
-				zoomRate = 10|10|10|10|10|10|10
+				cameraTransform = CameraTransform|Windward|Downward|Downward1|Downward2|CameraTransformAirlock|CameraTransform1|CameraTransform2
+				fovLimits = 90,5|90,5|90,5|90,5|90,5|90,5|90,5|90,5
+				zoomRate = 10|10|10|10|10|10|10|10
 				zoomIn = 2
 				zoomOut = 3
-				yawLimits = -45,45|-45,45|-45,45|-45,45|-45,45|-45,45|-45,45
-				yawRate = 15|15|15|15|15|15|15
+				yawLimits = -45,45|-45,45|-45,45|-45,45|-45,45|-45,45|-45,45|-45,45
+				yawRate = 15|15|15|15|15|15|15|15
 				yawLeft = 5
 				yawRight = 4
-				pitchLimits = -45,35|-45,35|-45,35|-45,35|-45,35|-45,35|-45,35
-				pitchRate = 15|15|15|15|15|15|15
+				pitchLimits = -45,35|-45,35|-45,35|-45,35|-45,35|-45,35|-45,35|-45,35
+				pitchRate = 15|15|15|15|15|15|15|15
 				pitchUp = 0
 				pitchDown = 1
 				nextCamera = 7
@@ -452,15 +452,6 @@ PROP
 			scale = 0.0,0.5
 		}
 	}
-}
-
-RPM_MATH_VARIABLE
-{
-   name = STARSHIP_RADARALT
-   operator = SUBTRACT
-
-   sourceVariable = RADARALTOCEAN
-   sourceVariable = 9.6 // 14.85
 }
 
 RPM_CUSTOM_VARIABLE
