--- a/Kerbal Space Program/GameData/StarshipInterface/Patches/kOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Patches/kOS.cfg
@@ -1,6 +1,6 @@
-@PART[SEP_22_BOOSTER_CORE_KOS|SEP_22_SHIP_BODY_KOS|SEP_22_SHIP_TANKER_KOS|SEP_22_SHIP_CARGO_KOS|SEP_22_SHIP_CREW_KOS|SEP_23_SHIP_BODY_EXP_KOS|SEP_23_SHIP_NOSE_EXP_KOS|SEP_23_SHIP_DEPOT_KOS|SLE_SS_OLM_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CORE_KOS|SEP_22_SHIP_BODY_KOS|SEP_22_SHIP_TANKER_KOS|SEP_22_SHIP_CARGO_KOS|SEP_22_SHIP_CREW_KOS|SEP_23_SHIP_BODY_EXP_KOS|SEP_23_SHIP_NOSE_EXP_KOS|SEP_23_SHIP_DEPOT_KOS|SLE_SS_OLM_KOS]:NEEDS[kOS,!RealismOverhaul,!FerramAerospaceResearch]:FOR[StarshipInterface]
 {
-	MODULE:NEEDS[kOS,!RealismOverhaul,!FerramAerospaceResearch]
+	MODULE
     {
         name = kOSProcessor
         diskSpace = 255000
