--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_INTER_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_INTER_KOS.cfg
@@ -96,29 +96,18 @@ PART
 	}
 
 
-	MODULE:NEEDS[!RealSolarSystem]
+	MODULE
 		{
 		name = ModuleReactionWheel
 	
-		PitchTorque = 150
-		YawTorque = 150
-		RollTorque = 500
+		PitchTorque:NEEDS[!RealSolarSystem] = 75
+		YawTorque:NEEDS[!RealSolarSystem] = 75
+		RollTorque:NEEDS[!RealSolarSystem] = 75
+
+		PitchTorque:NEEDS[RealSolarSystem] = 250
+		YawTorque:NEEDS[RealSolarSystem] = 250
+		RollTorque:NEEDS[RealSolarSystem] = 250
 	
-		RESOURCE
-		{
-			name = ElectricCharge
-			rate = 2
-		}
-	}
-
-	MODULE:NEEDS[RealSolarSystem]
-		{
-		name = ModuleReactionWheel
-
-		PitchTorque = 250
-		YawTorque = 250
-		RollTorque = 1500
-
 		RESOURCE
 		{
 			name = ElectricCharge
