--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SLE_SS_OLM_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SLE_SS_OLM_KOS.cfg
@@ -42,9 +42,9 @@ PART
 	maximum_drag = 0.2
 	minimum_drag = 0.3
 	angularDrag = 2
-	crashTolerance = 100
-	breakingForce = 500000
-	breakingTorque = 500000
+	crashTolerance = 1000000
+	breakingForce = 500000000
+	breakingTorque = 500000000
 	maxTemp = 999999
 	//sound_decoupler_fire = activate
 	stageOffset = 0
@@ -62,8 +62,8 @@ PART
 		referenceAttachNode = node_stack_top
 		nodeType = BTB
 		stagingToggleEnabledEditor = false
-		//minDistanceToReEngage = 1.0
 	}
+
 	MODULE
 	{
 		name = ModuleAnimateGeneric
@@ -72,12 +72,14 @@ PART
  		endEventGUIName = Open Clamps + QD
  		actionGUIName = Toggle Clamps + QD
 	}
+
 	RESOURCE
     {
         name = DelugeWater
         amount = 10
         maxAmount = 10
     }
+
 	EFFECTS
     {
         running_deluge
@@ -105,6 +107,7 @@ PART
 			} 
     	}
     }
+
     MODULE
     {
         name = ModuleEnginesFX
@@ -135,6 +138,7 @@ PART
             key = 1 100
         }
     }
+
 	MODULE
 	{
 		name = ModuleGenerator
@@ -146,6 +150,7 @@ PART
 			rate = 100
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleGenerator
@@ -186,6 +191,7 @@ PART
 			rate = 10
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleGenerator
@@ -202,6 +208,7 @@ PART
 			rate = 0.25
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -240,9 +247,11 @@ PART
             }
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleB9AssignUiGroups
+
 		MODULE
 		{
 			IDENTIFIER
@@ -253,6 +262,7 @@ PART
 			uiGroupName = WaterDelugeSystem
 			uiGroupDisplayName = #LOC_SLE_SS_OLM_WaterDeluge
 		}
+
 		MODULE
 		{
 			IDENTIFIER
@@ -264,12 +274,6 @@ PART
 			uiGroupDisplayName = #LOC_SLE_SS_OLM_WaterDeluge
 		}
 	}
-
-	//MODULE
-	//{
-	//	name = ModuleB9DisableTransform
-	//	transform = KK_Collider
-	//}
 
 	MODULE
 	{
