--- a/Kerbal Space Program/GameData/StarshipInterface/kOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/kOS.cfg
@@ -23,9 +23,11 @@ Localization
 	en-us
 	{
 		#autoLOC_6006035 = Activate Pitch Controls
+		#autoLOC_6006036 = Deactivate Pitch Control
 		#autoLOC_6006038 = Activate Yaw Control
 		#autoLOC_6006039 = Deactivate Yaw Control
 		#autoLOC_6006041 = Activate Roll Control
+		#autoLOC_6006042 = Deactivate Roll Control
 	}
 }
 
