--- a/Kerbal Space Program/Ships/Script/settings.json
+++ b/Kerbal Space Program/Ships/Script/settings.json
@@ -113,6 +113,14 @@
             "$type": "kOS.Safe.Encapsulation.ScalarDoubleValue"
         },
         {
+            "value": "Auto-Stack",
+            "$type": "kOS.Safe.Encapsulation.StringValue"
+        },
+        {
+            "value": "true",
+            "$type": "kOS.Safe.Encapsulation.StringValue"
+        },
+        {
             "value": "Tooltips",
             "$type": "kOS.Safe.Encapsulation.StringValue"
         },
