--- a/Kerbal Space Program/GameData/StarshipInterface/kOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/kOS.cfg
@@ -97,3 +97,18 @@ Localization
 		}
 	}
 }
+
+@PART[SEP_*]:HAS[@MODULE[ModuleControlSurface]]:AFTER[AECS_Motion_Suppressor]
+{
+	-MODULE[ModuleCSToggle],* {}
+}
+
+@PART[SEP_*]:HAS[@MODULE[ModuleAeroSurface]]:AFTER[AECS_Motion_Suppressor]
+{
+	-MODULE[ModuleCSToggle],* {}
+}
+
+@PART[SEP_*]:HAS[@MODULE[ModuleEngines*],@MODULE[ModuleGimbal]]:AFTER[AECS_Motion_Suppressor]
+{
+	-MODULE[ModuleEngineGimbal],* {}
+}
