--- a/Optional patches/SEPkOS patch for stock Kerbin with Parallax.cfg
+++ b/Optional patches/SEPkOS patch for stock Kerbin with Parallax.cfg
@@ -21,3 +21,21 @@
 		@baseVolume:NEEDS[Kopernicus&Parallax&!RealSolarSystem&!KSRSS&!SigmaDimensions] = 50000
 	}
 }
+
+@PART[SEP_23_BOOSTER_CLUSTER]:NEEDS[Kopernicus&Parallax]:AFTER[StarshipExpansionProject]
+{
+	@MODULE[ModuleSEPEngineGUI]
+	{
+		@SingleEngineThrust = 252.5
+		%MiddleSingleEngineThrust = 312.5
+		%CenterSingleEngineThrust = 667
+	}
+}
+
+@PART[SEP_23_RAPTOR_VAC|SEP_23_RAPTOR2_SL_RB|SEP_23_RAPTOR2_SL_RC]:NEEDS[Kopernicus&Parallax]:AFTER[StarshipExpansionProject]
+{
+	@MODULE[ModuleEnginesFX]
+	{
+		@maxThrust = 308
+	}
+}
