--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SLE_SS_OLM_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SLE_SS_OLM_KOS.cfg
@@ -285,6 +285,8 @@ PART
 	{
 		name = LaunchClamp
 		stagingEnabled = false
+		trf_towerPivot_name = Part
+		trf_anchor_name = GameObjectM
 	}
 
     MODULE
