--- a/Optional patches/SEPkOS patch for stock Kerbin with Parallax.cfg
+++ b/Optional patches/SEPkOS patch for stock Kerbin with Parallax.cfg
@@ -2,7 +2,7 @@
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]]
 	{
-		@baseVolume:NEEDS[Kopernicus&Parallax&!RealSolarSystem&!KSRSS&!SigmaDimensions] = 13800
+		@baseVolume:NEEDS[Kopernicus&!RealSolarSystem&!KSRSS&!SigmaDimensions] = 13800
 	}
 }
 
@@ -10,7 +10,7 @@
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]]
 	{
-		@baseVolume:NEEDS[Kopernicus&Parallax&!RealSolarSystem&!KSRSS&!SigmaDimensions] = 73600
+		@baseVolume:NEEDS[Kopernicus&!RealSolarSystem&!KSRSS&!SigmaDimensions] = 73600
 	}
 }
 
@@ -18,11 +18,11 @@
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]]
 	{
-		@baseVolume:NEEDS[Kopernicus&Parallax&!RealSolarSystem&!KSRSS&!SigmaDimensions] = 50000
+		@baseVolume:NEEDS[Kopernicus&!RealSolarSystem&!KSRSS&!SigmaDimensions] = 50000
 	}
 }
 
-@PART[SEP_23_BOOSTER_CLUSTER]:NEEDS[Kopernicus&Parallax]:AFTER[StarshipExpansionProject]
+@PART[SEP_23_BOOSTER_CLUSTER]:NEEDS[Kopernicus&!RealSolarSystem&!KSRSS&!SigmaDimensions]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleSEPEngineGUI]
 	{
@@ -32,7 +32,7 @@
 	}
 }
 
-@PART[SEP_23_RAPTOR_VAC|SEP_23_RAPTOR2_SL_RB|SEP_23_RAPTOR2_SL_RC]:NEEDS[Kopernicus&Parallax]:AFTER[StarshipExpansionProject]
+@PART[SEP_23_RAPTOR_VAC|SEP_23_RAPTOR2_SL_RB|SEP_23_RAPTOR2_SL_RC]:NEEDS[Kopernicus&!RealSolarSystem&!KSRSS&!SigmaDimensions]:AFTER[StarshipExpansionProject]
 {
 	@MODULE[ModuleEnginesFX]
 	{
