--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SLE_SS_OLM_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SLE_SS_OLM_KOS.cfg
@@ -45,7 +45,7 @@ PART
 	crashTolerance = 1000000
 	breakingForce = 500000000
 	breakingTorque = 500000000
-	maxTemp = 999999
+	maxTemp = 99999
 	//sound_decoupler_fire = activate
 	stageOffset = 0
 	childStageOffset = 0
@@ -55,6 +55,12 @@ PART
 	overrideStagingIconIfBlank = true
 	stageOffset = 0
 	tags = Starship Super Heavy Booster SpaceX Landing Ship Launch Pad Table OLM Orbital OLM
+	emissiveConstant = 1
+	heatConductivity = 1
+	thermalMassModifier = 1
+	skinInternalConductionMult = 2000
+	heatConvectiveConstant = 99999
+
 
 	MODULE
 	{
