--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SLE_SS_OLIT_Base_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SLE_SS_OLIT_Base_KOS.cfg
@@ -47,6 +47,11 @@ PART
 	maxTemp = 10000 
 	vesselType = Base
 	tags = Starship Super Heavy Booster SpaceX Landing Ship Launch Tower Base OLP Orbital Pad
+	emissiveConstant = 1
+	heatConductivity = 1
+	thermalMassModifier = 1
+	skinInternalConductionMult = 2000
+	heatConvectiveConstant = 99999
 	
 	MODULE
 	{
