--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SLE_SS_OLIT_Base_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SLE_SS_OLIT_Base_KOS.cfg
@@ -97,4 +97,12 @@ PART
 			secondaryColor = #696969
 		}	
 	}
+
+	MODULE
+	{
+		name = LaunchClamp
+		stagingEnabled = false
+		trf_towerPivot_name = Main
+		trf_anchor_name = GameObjectB
+	}
 }
