--- a/Kerbal Space Program/GameData/StarshipInterface/Parts/SLE_SS_OLIT_Top_KOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Parts/SLE_SS_OLIT_Top_KOS.cfg
@@ -85,4 +85,12 @@ PART
 			
 		}
 	}
+
+	MODULE
+	{
+		name = LaunchClamp
+		stagingEnabled = false
+		trf_towerPivot_name = Main
+		trf_anchor_name = GameObjectT
+	}
 }
