--- a/Optional patches/SEPkOS patch for stock Kerbin with Kopernicus.cfg
+++ b/Optional patches/SEPkOS patch for stock Kerbin with Kopernicus.cfg
@@ -39,3 +39,27 @@
 		@maxThrust = 308
 	}
 }
+
+@PART[SEP_23_SHIP_BODY|SEP_23_SHIP_BODY_EXP|SEP_23_SHIP_TANKER|SEP_23_SHIP_CARGO|SEP_23_SHIP_CARGO_EXP|SEP_23_SHIP_CREW|SEP_23_SHIP_NOSE_EXP|SEP_23_SHIP_DEPOT|SEP_24_SHIP_PROTO_NOSE|SEP_24_SHIP_PROTO_BODY|SEP_23_SHIP_CREW_EXP|SEP_23_BOOSTER_INTEGRATED]:FOR[StarshipExpansionProject]
+{
+	@MODULE[ModuleRCSFX]
+	{
+		@thrusterPower = 20
+	}
+}
+
+@PART[SEP_23_SHIP_BODY|SEP_23_SHIP_BODY_EXP|SEP_23_SHIP_TANKER|SEP_23_SHIP_CARGO|SEP_23_SHIP_CREW|SEP_23_SHIP_DEPOT|SEP_24_SHIP_PROTO_BODY|SEP_24_HOPPY]:FOR[StarshipExpansionProject]
+{
+	@MODULE[ModuleEnginesFX]:HAS[#engineID[Vents]]
+	{
+		@multFlow= 2
+	}
+}
+
+@PART[SEP_23_BOOSTER_INTEGRATED]:FOR[StarshipExpansionProject]
+{
+	@MODULE[ModuleEnginesFX]:HAS[#engineID[Vents]]
+	{
+		@multFlow = 10
+	}
+}
