--- a/Kerbal Space Program/GameData/StarshipInterface/kOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/kOS.cfg
@@ -1,4 +1,4 @@
-@PART[SEP_23_BOOSTER_INTEGRATED|SEP_23_SHIP_BODY|SEP_23_SHIP_TANKER|SEP_23_SHIP_CARGO|SEP_23_SHIP_CARGO_EXP|SEP_23_SHIP_CREW|SEP_23_SHIP_BODY_EXP|SEP_23_SHIP_NOSE_EXP|SEP_23_SHIP_DEPOT|SLE_SS_OLM_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
+@PART[SEP_23_BOOSTER_INTEGRATED|SEP_23_SHIP_BODY|SEP_23_SHIP_TANKER|SEP_23_SHIP_CARGO|SEP_23_SHIP_CARGO_EXP|SEP_23_SHIP_CREW|SEP_23_SHIP_BODY_EXP|SEP_23_SHIP_NOSE_EXP|SEP_23_SHIP_DEPOT|SLE_SS_OLM]:NEEDS[kOS]:FOR[StarshipInterface]
 {
 	MODULE
     {
@@ -7,7 +7,7 @@
     }
 }
 
-@PART[SLE_SS_OLIT_Base_KOS|SEP_23_BOOSTER_INTEGRATED]:NEEDS[kOS,XyphosAerospace]:AFTER[XyphosAerospace]
+@PART[SLE_SS_OLIT_Base|SEP_23_BOOSTER_INTEGRATED]:NEEDS[kOS,XyphosAerospace]:AFTER[XyphosAerospace]
 {
 	-MODULE[kOSProcessor],0 {}
 }
@@ -17,6 +17,20 @@
 	-MODULE[kOSProcessor],1 {}
 }
 
+@PART[SEP_*]:HAS[@MODULE[ModuleControlSurface]]:AFTER[AECS_Motion_Suppressor]
+{
+	-MODULE[ModuleCSToggle],* {}
+}
+
+@PART[SEP_*]:HAS[@MODULE[ModuleAeroSurface]]:AFTER[AECS_Motion_Suppressor]
+{
+	-MODULE[ModuleCSToggle],* {}
+}
+
+@PART[SEP_*]:HAS[@MODULE[ModuleEngines*],@MODULE[ModuleGimbal]]:AFTER[AECS_Motion_Suppressor]
+{
+	-MODULE[ModuleEngineGimbal],* {}
+}
 
 Localization
 {
@@ -31,7 +45,70 @@ Localization
 	}
 }
 
-@PART[SLE_SS_OLIT_MZ_KOS]:NEEDS[Kopernicus,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SLE_SS_*]:FOR[StarshipInterface]
+{
+	@rescaleFactor:NEEDS[Kopernicus&RealSolarSystem] = 1.6
+
+	-MODULE[LaunchClamp],* {}
+
+	MODULE
+	{
+		name = LaunchClamp
+		stagingEnabled = false
+	}
+}
+
+@PART[SLE_SS_OLM]:FOR[StarshipInterface]
+{
+	@MODULE[ModuleGenerator],1
+	{
+		-OUTPUT_RESOURCE,* {}
+
+		OUTPUT_RESOURCE:NEEDS[!CommunityResourcePack]
+		{
+			name = LiquidFuel
+			rate = 720
+		}
+
+		OUTPUT_RESOURCE:NEEDS[!CommunityResourcePack]
+		{
+			name = Oxidizer
+			rate = 880
+		}
+
+		OUTPUT_RESOURCE:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			rate = 3000
+		}
+
+		OUTPUT_RESOURCE:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			rate = 1000
+		}
+
+		OUTPUT_RESOURCE
+		{
+			name = MonoPropellant
+			rate = 10
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleDataTransmitter
+		antennaType = RELAY
+		packetInterval = 0.35
+		packetSize = 1
+		packetResourceCost = 24.0
+		requiredResource = ElectricCharge
+		antennaPower = 2000000000
+		antennaCombinable = True
+	}
+}
+
+@PART[SLE_SS_OLIT_MZ]:NEEDS[Kopernicus&RealSolarSystem]:FOR[StarshipInterface]
 {
 	@MODULE[ModuleSLEAnimate]:HAS[~AnimationName[MechazillaRight],~AnimationName[MechazillaLeft]],*
 	{
@@ -43,7 +120,7 @@ Localization
 		@OpenCloseRange = 0.24, 20, 20
 	}
 }
-@PART[SLE_SS_OLIT_Core_KOS]:NEEDS[Kopernicus,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SLE_SS_OLIT_Core]:NEEDS[Kopernicus&RealSolarSystem]:FOR[StarshipInterface]
 {
 	@MODULE[ModuleB9PartSwitch],0
 	{
@@ -96,19 +173,4 @@ Localization
 			@addedMass *= 4
 		}
 	}
-}
-
-@PART[SEP_*]:HAS[@MODULE[ModuleControlSurface]]:AFTER[AECS_Motion_Suppressor]
-{
-	-MODULE[ModuleCSToggle],* {}
-}
-
-@PART[SEP_*]:HAS[@MODULE[ModuleAeroSurface]]:AFTER[AECS_Motion_Suppressor]
-{
-	-MODULE[ModuleCSToggle],* {}
-}
-
-@PART[SEP_*]:HAS[@MODULE[ModuleEngines*],@MODULE[ModuleGimbal]]:AFTER[AECS_Motion_Suppressor]
-{
-	-MODULE[ModuleEngineGimbal],* {}
 }
