--- a/Kerbal Space Program/GameData/StarshipInterface/kOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/kOS.cfg
@@ -45,7 +45,7 @@ Localization
 	}
 }
 
-@PART[SLE_SS_*]:FOR[StarshipInterface]
+@PART[SLE_SS_*]:AFTER[StarshipLaunchExpansion]
 {
 	@rescaleFactor:NEEDS[Kopernicus&RealSolarSystem] = 1.6
 
@@ -58,7 +58,7 @@ Localization
 	}
 }
 
-@PART[SLE_SS_OLM]:FOR[StarshipInterface]
+@PART[SLE_SS_OLM]:AFTER[StarshipLaunchExpansion]
 {
 	@MODULE[ModuleGenerator],1
 	{
@@ -108,7 +108,7 @@ Localization
 	}
 }
 
-@PART[SLE_SS_OLIT_MZ]:NEEDS[Kopernicus&RealSolarSystem]:FOR[StarshipInterface]
+@PART[SLE_SS_OLIT_MZ]:NEEDS[Kopernicus&RealSolarSystem]:AFTER[StarshipLaunchExpansion]
 {
 	@MODULE[ModuleSLEAnimate]:HAS[~AnimationName[MechazillaRight],~AnimationName[MechazillaLeft]],*
 	{
@@ -120,7 +120,7 @@ Localization
 		@OpenCloseRange = 0.24, 20, 20
 	}
 }
-@PART[SLE_SS_OLIT_Core]:NEEDS[Kopernicus&RealSolarSystem]:FOR[StarshipInterface]
+@PART[SLE_SS_OLIT_Core]:NEEDS[Kopernicus&RealSolarSystem]:AFTER[StarshipLaunchExpansion]
 {
 	@MODULE[ModuleB9PartSwitch],0
 	{
