--- a/Kerbal Space Program/GameData/StarshipInterface/kOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/kOS.cfg
@@ -7,12 +7,12 @@
     }
 }
 
-@PART[SLE_SS_OLIT_Base|SEP_23_BOOSTER_INTEGRATED]:NEEDS[kOS,XyphosAerospace]:AFTER[XyphosAerospace]
+@PART[SLE_SS_OLIT_Base|SEP_23_BOOSTER_INTEGRATED]:NEEDS[kOS,XyphosAerospace/Tweaks/kOS-CommandPod/]:AFTER[XyphosAerospace]
 {
 	-MODULE[kOSProcessor],0 {}
 }
 
-@PART[SEP_23_SHIP_TANKER|SEP_23_SHIP_CARGO|SEP_23_SHIP_CARGO_EXP|SEP_23_SHIP_CREW|SEP_23_SHIP_NOSE_EXP|SEP_23_SHIP_DEPOT]:NEEDS[kOS,XyphosAerospace]:AFTER[XyphosAerospace]
+@PART[SEP_23_SHIP_TANKER|SEP_23_SHIP_CARGO|SEP_23_SHIP_CARGO_EXP|SEP_23_SHIP_CREW|SEP_23_SHIP_NOSE_EXP|SEP_23_SHIP_DEPOT]:NEEDS[kOS,XyphosAerospace/Tweaks/kOS-CommandPod/]:AFTER[XyphosAerospace]
 {
 	-MODULE[kOSProcessor],1 {}
 }
